[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/laser/player/laser.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Laser.gd" type="Script" id=2]
[ext_resource path="res://assets/laser/enemies/laser.glb" type="PackedScene" id=3]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0499679, 0.0487588, 0.25 )

[node name="Laser" type="Area" groups=[
"lasers",
]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="PlayerLaser" parent="." instance=ExtResource( 1 )]

[node name="EnemyLaser" parent="." instance=ExtResource( 3 )]
visible = false

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="area_entered" from="." to="." method="on_collision"]
